# osg_c-_base_fanvanzh-3dtiles

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
run_pkg/: ldd-libs.txt  run.sh
run_pkg/lib/: libGeographicLib.so.26  libOpenThreads.so.21  libcurl.so.4  libgif.so.7  libheif.so.1  libosg.so.161  libosgDB.so.161  libosgUtil.so.161  libpoppler.so.134  libsqlite3.so.0
src/: coordinate_system.cpp  coordinate_transformer.cpp  coordinate_transformer.h  geoid_height.h  main.cpp  mesh_processor.h  osg_gltf_converter.cpp  osg_gltf_converter.h  osgb_converter.cpp  utils.h
src1.1/: coordinate_system.h  geoid_height.cpp  main.cpp  mesh_processor.cpp  mesh_processor.h  osg_gltf_converter.cpp  osg_gltf_converter.h  osgb_converter.cpp  osgb_converter.h  split_tileset.py
tileset_hollow/: CMakeLists.txt  main.cpp  tileset_hollow.hpp
